--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 }
 
 /**Style css applique a tout les elements contenu dans la balise html**/
-htm{
+html{
  scroll-behavior: smooth;
 }
 
@@ -60,7 +60,8 @@ body{
  opacity: 0.7;/*reduction de l'opacity de l'element non actif au survol de la souris*/
 }
 
-.link.active::before{
+.link.active::before , 
+.separator::before{
  content: '';
  position: absolute;
  bottom: 0;
@@ -72,7 +73,8 @@ body{
  background: #fff;
 }
 
-.link.active::after{
+.link.active::after , 
+.separator::after{
  content: '';
  position: absolute;
  bottom: 2px;
@@ -85,7 +87,8 @@ body{
 
 /*image*/
 #pp{
- width: 15%;
+ width: 20%;
+ border-radius: 50px;
 }
 
 /*home section*/
@@ -116,7 +119,6 @@ body{
 /*highlight*/
 .highlight{
  color:darkorange;
- text-transform: capitalize;
 }
 
 /*profession*/
@@ -185,4 +187,136 @@ body{
  font-weight: 500;
  font-size: 3.5rem;
  text-transform: capitalize;
+}
+
+/*sub-heading*/
+.sub-heading{
+ text-align: center;
+ font-size: 1rem;
+ margin: 10px;
+ opacity: 0.7;
+}
+
+/*separator*/
+.separator{
+ width: 25%;
+ margin: 20px auto;
+ position: relative;
+}
+
+/*img*/
+img{
+ width: 75%;
+ border-radius: 50px;
+ box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+/*about-me-container*/
+.about-me-container{
+ margin: 150px 0 100px;
+ width: 100%;
+ display: grid;
+ grid-template-columns: 40% 60%;
+ grid-gap: 50px ;
+}
+
+/*left and right col*/
+.left-col , .right-col {
+ position: relative;
+}
+
+.left-col::before{
+ content: 'Oui , c\'est moi ';
+ text-transform: capitalize;
+ position: absolute;
+ right: 15px;
+ top: -30px;
+}
+
+.left-col::after{
+ content: '';
+ position: absolute;
+ top: -10px;
+ right: 125px;
+ width: 50px;
+ height: 2px;
+ background: #fff;
+ transform-origin: right;
+ transform: rotate(-30deg);
+}
+
+/*about-para*/
+.about-para{
+ font-size: 1.2rem;
+ font-weight: 300;
+ line-height: 35px;
+ margin-bottom: 40px;
+}
+/*skill-container*/
+.skill-container{
+ position: relative;
+ margin: 100px;
+ margin-top: 50px;
+ display: grid;
+ grid-template-columns: repeat(4 , 1fr);
+ grid-gap: 20px;
+}
+
+/*skill-card*/
+.skill-card{
+ height: 200px;
+ border-radius: 10px;
+ border: 1px solid #464646;
+ text-align: center;
+ position: relative;
+ cursor: pointer;
+ transition: .5s;
+}
+
+.skill-card:hover{
+ background: var(--bg);
+}
+
+.skill-card:hover .skill{
+ color: #fff;
+}
+
+.skill-card.large{
+ grid-column: 2 span;
+}
+
+/*skill*/
+.skill{
+ font-size: 2rem;
+ color: #464646;
+ line-height: 200px;
+}
+
+/*projet-section*/
+.projet{
+ position: relative;
+ padding: 50px 10vw;
+}
+
+/*filters*/
+.filters{
+ width: fit-content;
+ display: block;
+ margin: 100px auto;
+}
+
+/*filtern-btn*/
+.filter-btn{
+ padding: 10px 20px;
+ border-radius: 5px;
+ border: none;
+ text-transform: capitalize;
+ margin: 0 5px 10px;
+ cursor: pointer;
+}
+
+/*filter-btn.active*/
+.filter-btn.active{
+ background: darkorange;
+ color: #fff;
 }
