--- a/public/style.css
+++ b/public/style.css
@@ -205,7 +205,7 @@ body{
 }
 
 /*img*/
-img{
+img.about-image{
  width: 75%;
  border-radius: 50px;
  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
@@ -293,7 +293,7 @@ img{
 }
 
 /*projet-section*/
-.projet{
+.projet , .contact{
  position: relative;
  padding: 50px 10vw;
 }
@@ -319,4 +319,284 @@ img{
 .filter-btn.active{
  background: darkorange;
  color: #fff;
+}
+
+/*projet-container*/
+.projet-container{
+ width: 100%;
+ display: grid;
+ grid-template-columns: repeat(4 , 1fr);
+ grid-gap: 20px;
+}
+
+/*projet-card*/
+.projet-card{
+ position: relative;
+ cursor: pointer;
+ display: block;
+}
+
+/*projet-card img*/
+.projet-card img{
+ width: 100%;
+ height: 100%;
+ object-fit: cover;
+}
+
+/*projet-card .content*/
+.projet-card .content{
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ background: rgba(0, 0, 0, 0.7);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ transition: .5s;
+ text-transform: capitalize;
+ opacity: 0;
+}
+
+.projet-card:hover .content{
+ opacity: 1;
+}
+
+/*projet-name*/
+.projet-name{
+ font-weight: 300;
+ font-size: 2.5rem;
+ text-align: center;
+}
+
+/*projet-card.hide*/
+.projet-card.hide{
+ display: none;
+}
+
+/*tags*/
+.tags{
+ position: absolute;
+ bottom: 20px;
+ opacity: 0.6;
+ width: 90%;
+}
+
+/*contact-form*/
+.contact-form{
+ width: 100%;
+ margin-top: 100px;
+ position: relative;
+}
+
+/*contact-form input & .message*/
+.contact-form input , .message{
+ width: 100%;
+ display: block;
+ height: 50px;
+ padding: 20px;
+ border-radius: 5px;
+ background: #000;
+ color: #fff;
+ border: none;
+ outline: none;
+ margin: 30px 0 ;
+ resize: none;
+}
+
+.message{
+ height: 200px;
+ text-transform: capitalize;
+}
+
+/*contact-form .name*/
+.contact-form .name{
+ display: flex;
+ justify-content: space-between;
+}
+
+/*.name input*/
+.name input{
+ width: 90%;
+ margin: 0;
+ text-transform: capitalize;
+}
+
+/*.contact-form .btn*/
+.contact-form .btn{
+ display: block;
+ margin: auto;
+ cursor: pointer;
+}
+
+h3{
+ text-align: center;
+}
+
+.whatshapp{
+ font-weight:bolder;
+ color: darkorange;
+}
+
+/*footer*/
+.footer{
+ width: 100%;
+ height: 30px;
+ text-align: center;
+ background-color: darkorange;
+ text-transform: capitalize;
+ line-height: 30px;
+}
+
+/*responsive*/
+/*tablet-view*/
+@media(max-width: 996px) {
+
+ html{
+  font-size: 14px;
+ }
+ /*toggle-btn*/
+ .toggle-btn{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 10vw;
+  cursor: pointer;
+ }
+
+ .toggle-btn span{
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  top: 30%;
+  transition: .5s;
+ }
+
+.toggle-btn span:nth-child(2){
+ top: 70%;
+}
+
+ .toggle-btn.active span:nth-child(1) {
+  top: 50%;
+  transform: rotate(45deg);
+ }
+
+ .toggle-btn.active span:nth-child(2) {
+  top: 50%;
+  transform: rotate(-45deg);
+ }
+
+ /*links*/
+ .links-container{
+  position: absolute;
+  top: 60px;
+  background: #1d1d1d;
+  width: 100%;
+  left: 0;
+  padding: 0 10vw;
+  flex-direction: column;
+  transition: .5s;
+  opacity: 0;
+  pointer-events: none;
+ }
+
+ .links-container.show{
+  opacity: 1;
+  pointer-events: all;
+ }
+
+ .link{
+  margin-left: auto;
+  text-align: center;
+  display: block;
+  height: 50px;
+ }
+
+ /*home-section*/
+ .home{
+  flex-direction: column-reverse;
+  height: fit-content;
+  padding-bottom: 50px;
+ }
+ 
+ .home .image{
+  width: 250px;
+  margin: 40px;
+ }
+
+ .hero-content{
+  width: 70%;
+  min-width: 350px;
+  text-align: center;
+ }
+
+ .hero-heading{
+  font-size: 4.5rem;
+ }
+
+ /*about-section*/
+ .about-me-container{
+  grid-template-columns: 1fr;
+ }
+
+ .left-col{
+  margin: auto;
+  width: 50%;
+  min-width: 320px;
+ }
+
+ .skill-container , .projet-container{
+  grid-template-columns: repeat(2 , 1fr);
+ }
+
+ .skill-card{
+  grid-column: 1 span !important;
+ }
+}
+
+/*mobile-view*/
+@media(max-width: 500px) {
+ html{
+  font-size: 12px;
+ }
+ p , .sub-heading , .about-para , .left-col::before , .tags{
+  font-size: 1.4rem ;
+ }
+
+ .about-image{
+  width: 90%;
+  margin: auto;
+  display: block;
+ }
+
+ .skill-container , .projet-container{
+  grid-template-columns: 1fr ;
+ }
+
+ .skill{
+  font-size: 2.5rem
+ }
+
+ .projet-name{
+  font-size: 3rem;
+ }
+
+ .name{
+  flex-direction: column;
+ }
+
+ .name input{
+  width: 100%;
+ }
+
+ .first-name{
+  margin-bottom: 20px !important;
+ }
+
+ .filters{
+  display: grid;
+  grid-template-columns: repeat(2 , 1fr);
+ }
 }
